--- a/client/package.json
+++ b/client/package.json
@@ -1,41 +1,44 @@
 {
-  "name": "protyper",
+  "name": "my-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "./",
   "dependencies": {
-    "@babel/core": "7.12.17",
-    "@emotion/react": "11.4.1",
-    "@emotion/styled": "11.3.0",
-    "@mui/icons-material": "^5.0.3",
-    "@mui/material": "^5.0.3",
-    "axios": "0.21.4",
-    "cryptr": "6.0.2",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/icons-material": "^5.10.6",
+    "@mui/material": "^5.10.6",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
+    "cryptr": "^6.0.3",
     "node-sass": "^7.0.3",
-    "react": "17.0.2",
-    "react-cookies": "0.1.1",
-    "react-dom": "17.0.2",
-    "react-loader-spinner": "4.0.0",
-    "react-redux": "^7.1.1",
-    "react-router-dom": "5.0.1",
-    "react-scripts": "^5.0.1",
-    "redux": "4.0.4",
-    "redux-thunk": "2.3.0"
+    "react": "^18.2.0",
+    "react-cookies": "^0.1.1",
+    "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.3.4",
+    "react-redux": "^8.0.4",
+    "react-router-dom": "^6.4.1",
+    "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
-    "build": "SET NODE_OPTIONS=--openssl-legacy-provider &&  set INLINE_RUNTIME_CHUNK=false&&react-scripts build",
-    "postbuild": "rm -rf ../www && mv ./build ../www && cordova build android",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "newapi": "cd .. && sh ./superpower/newApi.sh"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
-      "0.2%",
+      ">0.2%",
       "not dead",
       "not op_mini all"
     ],
@@ -44,10 +47,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "eslint": "^7.20.0",
-    "eslint-config-google": "^0.14.0",
-    "eslint-plugin-react": "^7.22.0"
   }
 }
